*
* Light And Shadow. A Persistent Universe based on Robert Jordan's Wheel of Time Books.
* Copyright (C) 2001-2002 WOTLAS Team
*
* CHANGES BETWEEN VERSIONS
* ( File Best Viewed in 1024x768 or above)
*

CHANGES BETWEEN V1.2.3 AND V1.3 (20 May 2002)
---------------------------------------------

 - Added bots definitions and a link to a remote AliceBot server.
 - Improved the server architecture : lots of tasks done before by the ServerDirector are now
   done by the DataManager & ServerManager.
 - Added a new method for dynamic code loading.
 - all the resource access have been changed : the ResourceManager now handles every type of resource
 - new SoundLibrary architecture around a SoundPlayer & MusicPlayer created dynamically at start-up
 - brightness mask added to maps.
 - Progress Monitor added when you enter the game.
 - Antialiased Swing is now a wotlas library.
 - /info command has been renamed to /manual and it's use is now easier : "/manual fanfare"
 - Added a /away chat command and new player states to be able to say that you are connected but away.
 - The html documentation has been updated to make our code use proper URLs.
 - Added JAR Name detection and Java Web Start support.
 - Added in-game menus on the client side.
 - Enhanced network library. Our server now use Java 1.4 NetworkInterface to monitor its net interface.
 - New administration panel for the server.
 - New transfer scripts enabling the wotlas server to perform automatic IP updates on the wotlas web server.
 - Corrected a very old bug on the Warning messages.
 - Improved ImageLibrary code : JIT resources from a directory can now be loaded together.
 - Updated FAQ entries.


CHANGES BETWEEN V1.2.2 AND V1.2.3 (11 April 2002)
------------------------------------------------

 - Added a Message Router & Factory to make the server & client structure more clear.
   Each location Town / World / Room has a MessageRouter attached to it. The MessageRouter is provided
   by a factory at start-up.