@@ -41,7 +41,7 @@ public class TextDrawable extends Drawable {
 
    /** Default Font Name used.
     */
-    static private String defaultFontName = "Lucida Blackletter";
+    static private String defaultFontName = "Lucida Blackletter Regular";
 
  /*------------------------------------------------------------------------------------*/
 
